Creadas 2 actividades Listado y formulario La introduccion de datos se realiza desde el formulario El listado no se visualiza correctamente.

--- a/app/src/main/res/layout/activity_actividad_principal.xml
+++ b/app/src/main/res/layout/activity_actividad_principal.xml
@@ -51,22 +51,25 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
-                    android:text="Boton 1"
+                    android:text="Listado de Tumbas"
                     android:background="@color/colorAccent"
                     android:gravity="center"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"
                     android:clickable="true"
-                    android:onClick="boton1"/>
+                    android:onClick="botonListaTumbas"
+                    android:id="@+id/botonListaTumbas"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
-                    android:text="Boton 2"
+                    android:text="Accion 2"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"
                     android:background="@color/colorAccent"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:id="@+id/botonAccion2"
+                    android:onClick="botonAccion2"/>
 
                 <TextView
                     android:layout_width="match_parent"
