--- a/app/src/main/res/layout/activity_actividad_principal.xml
+++ b/app/src/main/res/layout/activity_actividad_principal.xml
@@ -23,6 +23,24 @@
             android:id="@+id/tvTitulo"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Ultima tumba: "
+            android:id="@+id/tvMaxTumbatitulo"
+            android:layout_alignParentBottom="true"
+            android:layout_toStartOf="@+id/tvMaxTumbaValor"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="100"
+            android:id="@+id/tvMaxTumbaValor"
+            android:layout_alignTop="@+id/tvMaxTumbatitulo"
+            android:layout_alignParentEnd="true"/>
     </RelativeLayout>
 
     <ScrollView
@@ -114,11 +132,13 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
-                    android:text="Boton 1"
+                    android:text="Oliver"
                     android:background="@color/colorAccent"
                     android:gravity="center"
                     android:layout_marginTop="4dp"
-                    android:layout_marginBottom="4dp"/>
+                    android:layout_marginBottom="4dp"
+                    android:id="@+id/btnOliver"
+                    android:onClick="botonOliver"/>
 
                 <TextView
                     android:layout_width="match_parent"
